--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-3 col-sm-5 col-md-3 day table-t-1">
+            <div class="col-3 col-sm-5 col-md-3 col-xl-2 day table-t-1">
 
                 <div class="row">
                     <div class="header">3-КН-20</div>
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="subject orange">
                         <a target="_blank" href="https://us04web.zoom.us/j/4894964381?pwd=Rzc5RnRXeXFMRWM0aUNxZnZxTXZzUT09">
-                            Філософія</a>
+                            Філософія пр.</a>
                     </div>
                 </div>
                 
