--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="subject green">
+                    <div class="subject orange">
                         <a target="_blank" href="https://us02web.zoom.us/j/8035360954?pwd=UG50MDc3ZmcwdEJNaHFYa0g3M3J5Zz09">
                             ООП
                         </a>
