--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                 <div class="row">
                     <div class="subject green">
-                        <a target="_blank" href=#>
+                        <a target="_blank" href="https://us02web.zoom.us/j/2710919793?pwd=ZHNuRXNSaHFYWDRIcVVYWVFXNGQ3Zz09">
                             МСШІ
                         </a>
                     </div>
@@ -134,15 +134,15 @@
 
                 <div class="row">
                     <div class="subject green">
-                        <a target="_blank" href=#>
-                            ПФІ
+                        <a target="_blank" href="https://us02web.zoom.us/j/4599394517?pwd=aGc3ZG5MTFhHTWRTTzZaeHlzTjNZZz09">
+                            ПІC
                         </a>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="subject green">
-                        <a target="_blank" href=#>
+                        <a target="_blank" href="https://us02web.zoom.us/j/6982470668?pwd=SFNmQUIvT0tRaHlDaVYrN3l5bzJVQT09">
                             Е
                         </a>
                     </div>
@@ -195,7 +195,7 @@
 
                 <div class="row">
                     <div class="subject green">
-                        <a target="_blank" href=#>
+                        <a target="_blank" href="https://udhtu-ukr-education.zoom.us/j/87364015224?pwd=K1llbjhGZDRLT29OL1BQR0hWOGxwUT09">
                             ЗІ
                         </a>
                     </div>
@@ -203,7 +203,7 @@
 
                 <div class="row">
                     <div class="subject green">
-                        <a target="_blank" href=#>
+                        <a target="_blank" href="https://us02web.zoom.us/j/7900010089?pwd=Z1lISTJjRnp0elgzSXUzaGk1NTNFdz09">
                             НМ
                         </a>
                     </div>
@@ -265,8 +265,8 @@
                 <div class="row">
                     <div class="shadow shadow-up"></div>
                     <div class="subject subject-up subject-up-orange">
-                        <a target="_blank" href=#>
-                            МСШІ
+                        <a target="_blank" href="https://us02web.zoom.us/j/2710919793?pwd=ZHNuRXNSaHFYWDRIcVVYWVFXNGQ3Zz09">
+                            МСШІ (онл)
                         </a>
                     </div>
                     
@@ -281,8 +281,8 @@
                 <div class="row">
                     <div class="shadow shadow-up"></div>
                     <div class="subject subject-up subject-up-orange">
-                        <a target="_blank" href=#>
-                            МСШІ
+                        <a target="_blank" href="https://us02web.zoom.us/j/2710919793?pwd=ZHNuRXNSaHFYWDRIcVVYWVFXNGQ3Zz09">
+                            МСШІ (онл)
                         </a>
                     </div>
                     
