--- a/index.html
+++ b/index.html
@@ -256,8 +256,16 @@
                 </div>
 
                 <div class="row">
-                    <div class="subject green">
-                        <a target="_blank" href="https://us02web.zoom.us/j/7900010089?pwd=Z1lISTJjRnp0elgzSXUzaGk1NTNFdz09">
+                    <div class="shadow shadow-up"></div>
+                    <div class="subject subject-up subject-up-green">
+                        <!-- <a target="_blank" href="https://udhtu-ukr-education.zoom.us/j/87364015224?pwd=K1llbjhGZDRLT29OL1BQR0hWOGxwUT09">
+                            ЗІ
+                        </a> -->
+                    </div>
+                    
+                    <div class="shadow shadow-down"></div>
+                    <div class="subject subject-down subject-down-green">
+                        <a target="_blank" href=https://us02web.zoom.us/j/7900010089?pwd=Z1lISTJjRnp0elgzSXUzaGk1NTNFdz09>
                             НМ
                         </a>
                     </div>
