--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
                 <div class="row">
                     <div class="subject orange">
-                        <a target="_blank" href="https://udhtu-ukr-education.zoom.us/my/oliashenko?pwd=aGc3ZG5MTFhHTWRTTzZaeHlzTjNZZz09">
+                        <a target="_blank" href="https://udhtu-ukr-education.zoom.us/j/6683473310?pwd=VVZZS3ZIVzdxR0dhVmZwVnE0UE9aQT09">
                             НМ
                         </a>
                     </div>
