--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="subject orange">
+                    <div class="subject green">
                         <a target="_blank" href=https://us02web.zoom.us/j/2710919793?pwd=ZHNuRXNSaHFYWDRIcVVYWVFXNGQ3Zz09>
                             Обч. інтелект
                         </a>
