--- a/index.html
+++ b/index.html
@@ -142,9 +142,13 @@
                 </div>
 
                 <div class="row">
-                    <div class="empty"></div>
+                    <div class="subject orange">
+                        <a target="_blank" href="https://us02web.zoom.us/j/8677341317?pwd=U21GQUs4NXl1aXVUNkNJeERCOG0zUT09" style="margin-top: 10px;">
+                            Упр. якістю <br> <div style="margin-top: -15px;"><sub style="bottom: -5px;">За бажанням</sub><br> <sub style="bottom: 10px;">Викладач чекає 15 хв</sub></div>
+                        </a>
+                    </div>
                 </div>
-
+                
                 <div class="row">
                     <div class="subject green">
                         <a target="_blank" href="https://udhtu-ukr-education.zoom.us/j/6634512318?pwd=wYYmGJBYorys0lJJbauVE0Tp2O508L.1&omn=83112041977">
@@ -249,7 +253,7 @@
                     
                     <div class="shadow shadow-down"></div>
                     <div class="subject subject-down subject-down-orange">
-                        <a target="_blank" href="https://udhtu-ukr-education.zoom.us/my/oliashenko?pwd=aGc3ZG5MTFhHTWRTTzZaeHlzTjNZZz09">
+                        <a target="_blank" href="https://us02web.zoom.us/j/8677341317?pwd=U21GQUs4NXl1aXVUNkNJeERCOG0zUT09">
                             Упр. якістю
                         </a>
                     </div>
