--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <div class="row">
                     <div class="subject green">
                         <a target="_blank" href="https://us02web.zoom.us/j/9607971030?pwd=UlkwRmhMRm1RTlFjNUh2TXJsc1dKUT09">
-                            Проектування
+                            Проєктування
                         </a>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                 <div class="row">
                     <div class="subject green">
                         <a target="_blank" href="https://us02web.zoom.us/j/8035360954?pwd=UG50MDc3ZmcwdEJNaHFYa0g3M3J5Zz09">
-                            Моб. розробка
+                            Мульт. розробка
                         </a>
                     </div>
                 </div>
@@ -409,7 +409,7 @@
                     <div class="shadow shadow-up"></div>
                     <div class="subject subject-up subject-up-orange">
                         <a target="_blank" href="https://us02web.zoom.us/j/9607971030?pwd=UlkwRmhMRm1RTlFjNUh2TXJsc1dKUT09">
-                            Проектування
+                            Проєктування
                         </a>
                     </div>
                     
@@ -425,7 +425,7 @@
                     <div class="shadow shadow-up"></div>
                     <div class="subject subject-up subject-up-orange">
                         <a target="_blank" href="https://us02web.zoom.us/j/8035360954?pwd=UG50MDc3ZmcwdEJNaHFYa0g3M3J5Zz09">
-                            Моб. розробка
+                            Мульт. розробка
                         </a>
                     </div>
                     
