--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
 
                 <div class="row">
                     <div class="shadow shadow-up"></div>
-                    <div class="subject subject-up subject-up-orange">
+                    <div class="subject subject-up subject-up-green">
                         <a target="_blank" href="https://us02web.zoom.us/j/7900010089?pwd=Z1lISTJjRnp0elgzSXUzaGk1NTNFdz09">
                             Дослідження с.
                         </a>
                     </div>
                     
                     <div class="shadow shadow-down"></div>
-                    <div class="subject subject-down subject-down-orange">
+                    <div class="subject subject-down subject-down-green">
                         <a target="_blank" href="https://us02web.zoom.us/j/7900010089?pwd=Z1lISTJjRnp0elgzSXUzaGk1NTNFdz09">
                             Оптимізація с.
                         </a>
